--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@
 
 .main h1{
   text-align: center;
-  padding-top: 110px;
   color: white;
   border-bottom: 1.5px solid white;
 }
@@ -152,6 +151,10 @@ textarea{
     float: left;
   }
 
+  .main h1{
+    padding-top: 110px;
+  }
+
   .board-left-wrapper{
     float: left;
     text-align: center;
@@ -179,6 +182,7 @@ textarea{
 
   .main h1{
     font-size: 25px;
+    padding-top: 60px;
   }
 
   .board-wrapper{
